--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-native": "0.71.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
