--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "base-64": "^1.0.0",
     "expo": "~48.0.18",
     "expo-barcode-scanner": "^12.3.2",
+    "expo-localization": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
