--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "^4.5.0"
+    "react-native": "0.72.1",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
