--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~49.0.0",
     "expo-barcode-scanner": "^12.5.3",
     "expo-localization": "^14.3.0",
+    "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
