--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
+    "@rneui/base": "4.0.0-rc.8",
+    "@rneui/themed": "4.0.0-rc.8",
     "base-64": "^1.0.0",
-    "expo": "~49.0.0",
+    "expo": "~49.0.6",
     "expo-barcode-scanner": "^12.5.3",
+    "expo-linear-gradient": "~12.3.0",
     "expo-localization": "^14.3.0",
-    "expo-splash-screen": "~0.20.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9"
