--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "extra": {
       "eas": {
