--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "base-64": "^1.0.0",
-    "expo": "~49.0.6",
-    "expo-barcode-scanner": "^12.5.3",
+    "expo": "~49.0.11",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-linear-gradient": "~12.3.0",
-    "expo-localization": "^14.3.0",
+    "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
@@ -24,7 +24,7 @@
     "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11"
+    "@babel/core": "^7.22.20"
   },
   "private": true
 }
