--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
