--- a/eas.json
+++ b/eas.json
@@ -6,12 +6,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_VDS_API_URL": "http://172.20.10.2:8000"
+      }
     },
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "env": {
+        "EXPO_PUBLIC_VDS_API_URL": "https://api.vds-verify.stelau.com"
+      }
+    }
   },
   "submit": {
     "production": {}
