Add versionCode for android submission

--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "bundleIdentifier": "com.stelau.vdsverify"
     },
     "android": {
+      "versionCode": "2",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0a51a1"
