--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vds-reader-expo",
+  "name": "vds-verify-expo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "base-64": "^1.0.0",
-    "expo": "^49.0.16",
+    "expo": "^49.0.18",
     "expo-barcode-scanner": "~12.5.3",
     "expo-linear-gradient": "~12.3.0",
     "expo-localization": "~14.3.0",
@@ -25,11 +28,13 @@
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2"
+    "@babel/core": "^7.23.3"
   },
   "private": true
 }
