--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "base-64": "^1.0.0",
     "expo": "^49.0.18",
     "expo-barcode-scanner": "~12.5.3",
-    "expo-linear-gradient": "~12.3.0",
+    "expo-constants": "^14.4.2",
     "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
-    "react-native-dotenv": "^3.4.9",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-vector-icons": "^10.0.2"
   },
-  "devDependencies": {
-    "@babel/core": "^7.23.3"
-  },
+  "devDependencies": {},
   "private": true
 }
