--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "base-64": "^1.0.0",
@@ -22,12 +24,14 @@
     "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {},
   "private": false
