--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: VDS Verify
-logo: /assets/icon-512.png
+logo: ../assets/icon-512.png
 description: Visible Digital Seal Reader is an app that allows you to read and verify the information contained in a VDS (Visible Digital Seal). It sends the QRcode or datamatrix to our API to read, decode and verify the information and display it in a human readable format.
 show_downloads: false
 google_analytics:
