--- a/app.json
+++ b/app.json
@@ -51,6 +51,6 @@
         "projectId": "2f5314e0-d7e8-4b1d-96bc-8c10bcb2e53d"
       }
     },
-    "owner": "nicocha"
+    "owner": "stelau"
   }
 }
