--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "^14.4.2",
+    "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
