--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
   "private": false
 }
