fix errors with eslint and add yarn lint and format

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ignore-path .gitignore --ext .js .",
+    "format": "prettier --ignore-path ./.gitignore --write \"**/*.+(js|json)\""
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -18,6 +20,7 @@
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "base-64": "^1.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "^14.4.2",
@@ -25,6 +28,7 @@
     "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
@@ -35,7 +39,11 @@
     "react-native-webview": "13.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.1.0"
   },
   "private": false
 }
