update dependencies and fix react hooks execution order warning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,13 @@
     }
   },
   "plugins": ["react", "react-hooks"],
-  "rules": {}
+  "rules": {
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
