--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vds-verify",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -17,11 +17,11 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "@rneui/base": "4.0.0-rc.8",
-    "@rneui/themed": "4.0.0-rc.8",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "base-64": "^1.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "expo": "^49.0.23",
+    "expo": "49.0.23",
     "expo-application": "~5.3.0",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
