--- a/app.json
+++ b/app.json
@@ -14,15 +14,20 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "locales": {
+      "fr": "./languages/french.json",
+      "en": "./languages/english.json"
+    },
     "ios": {
-      "buildNumber": "55",
+      "buildNumber": "56",
       "supportsTablet": true,
       "infoPlist": {
         "CFBundleAllowMixedLocalizations": true,
-      },
-      "locales": {
-        "fr": "./languages/french.json",
-        "en": "./languages/english.json"
+        "CFBundleLocalizations": [
+          "en",
+          "fr"
+        ],
+        "CFBundleDevelopmentRegion": "fr"
       },
       "bundleIdentifier": "com.stelau.vdsverify",
       "associatedDomains": [
@@ -30,7 +35,7 @@
       ]
     },
     "android": {
-      "versionCode": 55,
+      "versionCode": 56,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0069b4"
