--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "base-64": "^1.0.0",
+    "Base64": "^1.3.0",
+    "crypto-es": "^2.1.0",
     "expo": "50.0.15",
     "expo-application": "~5.8.3",
     "expo-barcode-scanner": "~12.9.3",
