--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --ignore-path ./.gitignore --write \"**/*.+(js|json)\""
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -21,28 +21,28 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "50.0.17",
-    "expo-application": "~5.8.4",
-    "expo-barcode-scanner": "~12.9.3",
-    "expo-camera": "~14.1.3",
-    "expo-constants": "~15.4.6",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "~14.8.4",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.4",
+    "expo-application": "~5.9.1",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.5",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "18.3.1",
+    "react-native": "0.74.1",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
-    "eslint": "^9.1.1",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
