--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vds-verify",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -17,28 +17,28 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
+    "@rneui/base": "4.0.0-rc.8",
+    "@rneui/themed": "4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "~51.0.4",
+    "expo": "~51.0.5",
     "expo-application": "~5.9.1",
     "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.5",
+    "expo-camera": "~15.0.8",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
-    "react": "18.3.1",
+    "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "13.10.2"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
