--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
       "en": "./languages/english.json"
     },
     "ios": {
-      "buildNumber": "68",
+      "buildNumber": "69",
       "supportsTablet": true,
       "infoPlist": {
         "CFBundleAllowMixedLocalizations": true,
@@ -35,7 +35,7 @@
       ]
     },
     "android": {
-      "versionCode": 68,
+      "versionCode": 69,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0069b4"
@@ -66,6 +66,12 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
+      [
+        "react-native-vision-camera",
+        {
+          "enableCodeScanner": true
+        }
+      ],
       [
         "expo-camera",
         {
