--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vds-verify",
   "version": "1.2.2",
+  "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,18 +14,17 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "~51.0.14",
+    "expo": "~51.0.17",
     "expo-application": "~5.9.1",
-    "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.11",
+    "expo-camera": "~15.0.12",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
@@ -34,17 +34,18 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.16.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~3.31.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.3.2",
     "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
-    "eslint": "^9.5.0",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "^3.3.2"
   },
