--- a/package.json
+++ b/package.json
@@ -13,40 +13,41 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.0.6",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.1.0",
+    "@react-navigation/stack": "^7.0.5",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "~51.0.38",
-    "expo-application": "~5.9.1",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~52.0.9",
+    "expo-application": "~6.0.1",
+    "expo-camera": "~16.0.6",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-localization": "~16.0.0",
+    "expo-splash-screen": "~0.29.12",
+    "expo-status-bar": "~2.0.0",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.12.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "eslint": "^9.12.0",
+    "@babel/core": "^7.26.0",
+    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "prettier": "^3.3.3"
   },
-  "private": false
+  "private": false,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
