Add non-exempt encryption flag and record audio permission to app.json

--- a/app.json
+++ b/app.json
@@ -17,13 +17,17 @@
       "infoPlist": {
         "CFBundleAllowMixedLocalizations": true,
         "CFBundleLocalizations": ["en", "fr"],
-        "CFBundleDevelopmentRegion": "fr"
+        "CFBundleDevelopmentRegion": "fr",
+        "ITSAppUsesNonExemptEncryption": false
       },
       "bundleIdentifier": "com.stelau.vdsverify",
       "associatedDomains": ["applinks:vds-verify.stelau.com"]
     },
     "android": {
-      "permissions": ["android.permission.CAMERA"],
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
       "package": "com.stelau.vdsverify",
       "intentFilters": [
         {
