Add missing schema entry in intent filters for Android app.json

--- a/app.json
+++ b/app.json
@@ -38,6 +38,9 @@
               "scheme": "https",
               "host": "vds-verify.stelau.com",
               "pathPrefix": "/vds"
+            },
+            {
+              "schema": "vds"
             }
           ],
           "category": ["BROWSABLE", "DEFAULT"]
