Fix typo in app.json: change 'schema' to 'scheme' in intent filters

--- a/app.json
+++ b/app.json
@@ -40,7 +40,7 @@
               "pathPrefix": "/vds"
             },
             {
-              "schema": "vds"
+              "scheme": "vds"
             }
           ],
           "category": ["BROWSABLE", "DEFAULT"]
