--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,4 +1,5 @@
 source "https://rubygems.org"
 gem "github-pages", group: :jekyll_plugins
-gem "webrick", "~> 1.8"
-gem "fastlane"
+# gem "fastlane"
+# gem "webrick", "~> 1.9"
+# gem "bulma-clean-theme"
