--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
-    "@rneui/base": "4.0.0-rc.8",
-    "@rneui/themed": "4.0.0-rc.8",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "expo": "~53.0.9",
