--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vds-verify",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-application": "~6.1.5",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
