--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "54.0.9",
+    "expo": "54.0.10",
     "expo-application": "~7.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
@@ -34,7 +34,7 @@
     "react-native": "0.81.4",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-safe-area-context": "5.6.1",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.15.0"
