--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "lint": "eslint --ignore-path .gitignore --ext .js .",
-    "format": "prettier --ignore-path ./.gitignore --write \"**/*.+(js|json)\""
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "format": "prettier --ignore-path ./.gitignore --write \"**/*.+(js|ts|tsx|json)\"",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.4",
-    "@react-navigation/native": "^7.1.16",
-    "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.4.4",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "54.0.21",
+    "expo": "54.0.23",
     "expo-application": "~7.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
@@ -34,7 +35,6 @@
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.15.0"
@@ -45,7 +45,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.6.3"
   },
   "expo": {
     "doctor": {
