--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/ui": "0.2.0-beta.7",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.4.4",
-    "@rneui/base": "^4.0.0-rc.8",
-    "@rneui/themed": "^4.0.0-rc.8",
+    "@rneui/base": "4.0.0-rc.7",
+    "@rneui/themed": "4.0.0-rc.7",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "expo": "54.0.23",
     "expo-application": "~7.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
+    "expo-device": "^8.0.9",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -35,9 +37,12 @@
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
