--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crypto-js": "^4.2.0",
     "expo": "54.0.23",
     "expo-application": "~7.0.7",
+    "expo-blur": "~14.0.2",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
