Add expo-blur type to TypeScript configuration for improved type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["react", "react-native"]
+    "types": ["react", "react-native", "expo-blur"]
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
   "exclude": ["node_modules", "screens", "components", "navigation"]
