feat: Add ScanStatus and Settings contexts for managing scan results and app settings
- Implement ScanStatusContext to manage scan status and results.
- Create SettingsContext for language and history settings with AsyncStorage integration.
- Enhance CustomTabBar with animated indicator and glass effect for better UI.
- Update MainTabNavigator to use CustomTabBar.
- Refactor HistoryScreen to improve layout and add a glass overlay for the delete history button.
- Modify Scan screen to remove local bottom bar and utilize global navigation.
- Revamp SecurityDetails screen for better data presentation and styling.
- Redesign Settings screen with improved layout and functionality for history toggle and language selection.
- Introduce a theme file for consistent styling across the application.
- Update TypeScript configuration to exclude unnecessary directories.

--- a/app.json
+++ b/app.json
@@ -63,8 +63,15 @@
           "image": "./assets/icons/icon.png",
           "imageWidth": 100
         }
+      ],
+      [
+        "expo-router",
+        {
+          "origin": "https://vds-verify.stelau.com/"
+        }
       ]
     ],
+    "scheme": "vdsverify",
     "extra": {
       "eas": {
         "projectId": "2f5314e0-d7e8-4b1d-96bc-8c10bcb2e53d"
