--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vds-verify",
   "version": "1.3.2",
   "license": "MIT",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -18,41 +18,46 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
-    "@react-navigation/stack": "^7.4.4",
+    "@react-navigation/stack": "^7.6.3",
     "@rneui/base": "4.0.0-rc.7",
     "@rneui/themed": "4.0.0-rc.7",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "expo": "54.0.23",
     "expo-application": "~7.0.7",
-    "expo-blur": "~14.0.2",
-    "expo-camera": "~17.0.8",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-device": "^8.0.9",
+    "expo-glass-effect": "~0.1.6",
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
+    "expo-navigation-bar": "~5.0.9",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-reanimated": "^4.1.5",
+    "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "eslint": "^9.36.0",
+    "@babel/core": "^7.28.5",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.6.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3"
   },
   "expo": {
     "doctor": {
