--- a/package.json
+++ b/package.json
@@ -19,22 +19,21 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.6.3",
-    "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.7",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "54.0.23",
+    "expo": "54.0.25",
     "expo-application": "~7.0.7",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "^8.0.9",
     "expo-glass-effect": "~0.1.6",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-localization": "~17.0.7",
     "expo-navigation-bar": "~5.0.9",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
     "prop-types": "^15.8.1",
@@ -52,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@types/react": "~19.1.10",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
