--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-dev-client": "~6.0.18",
     "expo-device": "^8.0.9",
     "expo-glass-effect": "~0.1.6",
+    "expo-haptics": "~13.0.0",
     "expo-linking": "~8.0.9",
     "expo-localization": "~17.0.7",
     "expo-navigation-bar": "~5.0.9",
