refactor: Implement module resolver for improved path aliases and update imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["react", "react-native", "expo-blur"]
+    "types": ["react", "react-native", "expo-blur"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
   "exclude": ["node_modules"]
