--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^4.1.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-view-shot": "4.0.3",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.7.1"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
