--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,6 @@
 source "https://rubygems.org"
 gem "github-pages", group: :jekyll_plugins
+gem "jekyll-sitemap", "~> 1.4"
 # gem "fastlane"
 # gem "webrick", "~> 1.9"
 # gem "bulma-clean-theme"
